--- a/README.Rmd
+++ b/README.Rmd
@@ -10,7 +10,7 @@ The package contains one simply function: `plot_me` for plotting marginal
 effects from interactions estimated from models estimated with the
 `lm` function in base R. For example:
 
-```{r}
+```{r murder-me-example}
 # Load package
 library(plotMElm)
 
