--- a/README.Rmd
+++ b/README.Rmd
@@ -6,11 +6,13 @@ from linear models.
 
 [![Build Status](https://travis-ci.org/christophergandrud/plotMElm.svg?branch=master)](https://travis-ci.org/christophergandrud/plotMElm)
 
-# Example
+# Examples
+
+## Continuous Term 2
 
 The package contains one simply function: `plot_me` for plotting marginal
 effects from interactions estimated from models estimated with the
-`lm` function in base R. For example:
+`lm` function in base R. For example, when the second term is continuous:
 
 ```{r murder-me-example}
 # Load package
@@ -25,3 +27,20 @@ m1 <- lm(Murder ~ Income * Population,
 plot_me(m1, 'Income', 'Population')
 
 ```
+
+## Categorical Term 2 
+
+When the second term in the interaction is categorical (detected by having 5 or fewer categories) then point-ranges are plotted:
+
+```{r cars-example}
+# Estimate model
+m2 <- lm(mpg ~ wt * cyl, data = mtcars)
+
+# Plot marginal effect of Weight across the Number of Cylinders
+plot_me(m2, 'wt', 'cyl')
+```
+
+## See also 
+
+The [interplot](https://cran.r-project.org/web/packages/interplot/) package also has many of the same capabilities as *plotMElm*.
+
