--- a/README.Rmd
+++ b/README.Rmd
@@ -26,17 +26,23 @@ m1 <- lm(Murder ~ Income * Population, data = states)
 plot_me(m1, 'Income', 'Population')
 ```
 
-## Categorical Term 2 
+## Categorical (Factor) Term 2
 
-When the second term in the interaction is categorical (detected by having 5 or fewer categories) then point-ranges are plotted:
+When the second term in the interaction is a categorical (factor) variable then point-ranges are plotted. Note that the marginal effect is in terms of the 
+reference category:
 
 ```{r cars-example}
+# Set Term 2 as a factor variable
+mtcars$cyl <- as.factor(mtcars$cyl)
+
 # Estimate model
 m2 <- lm(mpg ~ wt * cyl, data = mtcars)
 
 # Plot marginal effect of Weight across the Number of Cylinders
 plot_me(m2, 'wt', 'cyl')
 ```
+
+Note that point ranges will also be used if there are five or fewer fitted values.
 
 ## See also 
 
