--- a/README.Rmd
+++ b/README.Rmd
@@ -50,7 +50,40 @@ plot_me(m2, 'wt', 'cyl')
 
 Note that point ranges will also be used if there are five or fewer fitted values.
 
+## Determining the False Positive Rate
+
+[Esarey and Sumner](http://jee3.web.rice.edu/interaction-overconfidence.pdf) 
+show that pointwise confidence intervals from marginal effect plots produce 
+statistically significant findings at a rate that can be larger or smaller 
+than is warrented. `plot_me` allows users to specify `ci_type = 'fdr'` to find
+confidence intervals that correct for overly confident marginal effects in the 
+face of multiple comparisons. FDR stands for "False Discovery Rate". For example:
+
+```{r eval=FALSE}
+# Plot marginal effect of Income across the observed range of Population
+# with false discovery rate limited confidence intervals
+plot_me(m1, 'Income', 'Population', ci_type = 'fdr')
+```
+
+Here is the result compared with standard confidence intervals:
+
+```{r, echo=FALSE}
+library(ggplot2)
+library(gridExtra)
+p1 <- plot_me(m1, 'Income', 'Population') + ggtitle('Standard CI')
+p2 <- plot_me(m1, 'Income', 'Population', ci_type = 'fdr') + 
+            ggtitle('FDR Limiting CI')
+grid.arrange(p1, p2, nrow = 1)
+```
+
+You can also use the `t_statistic` argument to supply custom t-statistics
+for creating the marginal effect confidence intervals. This is useful if you 
+want to use a funciton like `findMultiLims` from the 
+[interactTest](https://cran.r-project.org=interactionTest) to find t-statistics 
+that can be used to correct confidence intervals for underconfidence.
+
 ## See also 
 
-The [interplot](https://cran.r-project.org/package=interplot) package also has many of the same capabilities as *plotMElm*.
+The [interplot](https://cran.r-project.org/package=interplot) package also has 
+some of the same capabilities as **plotMElm**.
 
