--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,7 @@ grid.arrange(p1, p2, nrow = 1)
 You can also use the `t_statistic` argument to supply custom t-statistics
 for creating the marginal effect confidence intervals. This is useful if you 
 want to use a funciton like `findMultiLims` from the 
-[interactTest](https://cran.r-project.org/package=interactionTest) to find t-statistics 
+[interactTest](https://cran.r-project.org/package=interactionTest) package to find t-statistics 
 that can be used to correct confidence intervals for underconfidence.
 
 ## See also 
