--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# Version 0.1.6
+
+- Change README figure files paths for CRAN.
+
 # Version 0.1.5
 
 - Resolved a bug where `plot_me` didn't actually check `term1`'s type.
