--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,7 @@
+---
+output: github_document
+---
+
 plotMElm
 ======================
 
@@ -19,7 +23,7 @@ The package contains one simply function: `plot_me` for plotting marginal
 effects from interactions estimated from models estimated with the
 `lm` function in base R. For example, when the second term is continuous:
 
-```{r murder-me-example}
+```{r murder-me-example, fig.path="tools/"}
 # Load package
 library(plotMElm)
 
@@ -36,7 +40,7 @@ plot_me(m1, 'Income', 'Population')
 When the second term in the interaction is a categorical (factor) variable then point-ranges are plotted. Note that the marginal effect is in terms of the 
 reference category:
 
-```{r cars-example}
+```{r cars-example, fig.path="tools/"}
 # Set Term 2 as a factor variable
 mtcars$cyl <- factor(mtcars$cyl, 
                      labels = c('4 Cyl', '6 Cyl', '8 Cyl'))
@@ -67,7 +71,7 @@ plot_me(m1, 'Income', 'Population', ci_type = 'fdr')
 
 Here is the result compared with standard confidence intervals:
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, fig.path="tools/"}
 library(ggplot2)
 library(gridExtra)
 p1 <- plot_me(m1, 'Income', 'Population') + ggtitle('Standard CI')
